[package]
name = "locked_titles_convert"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
chrono = "0.4.38"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
